v0.17a1/_sources/_api/ophyd_async/ophyd_async.epics.motor.md.txt
# {py:mod}`ophyd_async.epics.motor`

```{py:module} ophyd_async.epics.motor
```

```{autodoc2-docstring} ophyd_async.epics.motor
:allowtitles:
```

## Module Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`Motor <ophyd_async.epics.motor.Motor>`
  - ```{autodoc2-docstring} ophyd_async.epics.motor.Motor
    :summary:
    ```
* - {py:obj}`InstantMotorMock <ophyd_async.epics.motor.InstantMotorMock>`
  - ```{autodoc2-docstring} ophyd_async.epics.motor.InstantMotorMock
    :summary:
    ```
* - {py:obj}`OffsetMode <ophyd_async.epics.motor.OffsetMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.motor.OffsetMode
    :summary:
    ```
* - {py:obj}`UseSetMode <ophyd_async.epics.motor.UseSetMode>`
  - ```{autodoc2-docstring} ophyd_async.epics.motor.UseSetMode
    :summary:
    ```
````

### API

````{py:exception} MotorLimitsError()
:canonical: ophyd_async.epics.motor.MotorLimitsError

Bases: {py:obj}`Exception`

```{autodoc2-docstring} ophyd_async.epics.motor.MotorLimitsError
```

````

`````{py:class} Motor(prefix: str, name='')
:canonical: ophyd_async.epics.motor.Motor

Bases: {py:obj}`ophyd_async.core.StandardReadable`, {py:obj}`bluesky.protocols.Locatable`\[{py:obj}`float`\], {py:obj}`bluesky.protocols.Stoppable`, {py:obj}`bluesky.protocols.Flyable`, {py:obj}`bluesky.protocols.Preparable`, {py:obj}`bluesky.protocols.Subscribable`\[{py:obj}`float`\]

```{autodoc2-docstring} ophyd_async.epics.motor.Motor
```

````{py:method} set_name(name: str, *, child_name_separator: str | None = None) -> None
:canonical: ophyd_async.epics.motor.Motor.set_name

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.set_name
```

````

````{py:method} check_motor_limit(abs_start_pos: float, abs_end_pos: float)
:canonical: ophyd_async.epics.motor.Motor.check_motor_limit
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.check_motor_limit
```

````

````{py:method} prepare(value: ~ophyd_async.core.FlyMotorInfo)
:canonical: ophyd_async.epics.motor.Motor.prepare
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.prepare
```

````

````{py:method} kickoff()
:canonical: ophyd_async.epics.motor.Motor.kickoff
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.kickoff
```

````

````{py:method} complete() -> ~ophyd_async.core.WatchableAsyncStatus
:canonical: ophyd_async.epics.motor.Motor.complete

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.complete
```

````

````{py:method} set(new_position: float, timeout: ~ophyd_async.core.CalculatableTimeout = CALCULATE_TIMEOUT)
:canonical: ophyd_async.epics.motor.Motor.set
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.set
```

````

````{py:method} stop(success=False)
:canonical: ophyd_async.epics.motor.Motor.stop
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.stop
```

````

````{py:method} locate() -> ~bluesky.protocols.Location[float]
:canonical: ophyd_async.epics.motor.Motor.locate
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.locate
```

````

````{py:method} subscribe_reading(function: ~ophyd_async.core.Callback[dict[str, ~bluesky.protocols.Reading[float]]]) -> None
:canonical: ophyd_async.epics.motor.Motor.subscribe_reading

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.subscribe_reading
```

````

````{py:attribute} subscribe
:canonical: ophyd_async.epics.motor.Motor.subscribe
:value: >
   None

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.subscribe
```

````

````{py:method} clear_sub(function: ~ophyd_async.core.Callback[dict[str, ~bluesky.protocols.Reading[float]]]) -> None
:canonical: ophyd_async.epics.motor.Motor.clear_sub

```{autodoc2-docstring} ophyd_async.epics.motor.Motor.clear_sub
```

````

`````

`````{py:class} InstantMotorMock(name: str = '', parent: ~ophyd_async.core._device.DeviceMock | None = None)
:canonical: ophyd_async.epics.motor.InstantMotorMock

Bases: {py:obj}`ophyd_async.core.DeviceMock`\[{py:obj}`Motor`\]

```{autodoc2-docstring} ophyd_async.epics.motor.InstantMotorMock
```

````{py:method} connect(device: ~ophyd_async.epics.motor.Motor) -> None
:canonical: ophyd_async.epics.motor.InstantMotorMock.connect
:async:

```{autodoc2-docstring} ophyd_async.epics.motor.InstantMotorMock.connect
```

````

`````

`````{py:class} OffsetMode()
:canonical: ophyd_async.epics.motor.OffsetMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.motor.OffsetMode
```

````{py:attribute} VARIABLE
:canonical: ophyd_async.epics.motor.OffsetMode.VARIABLE
:value: >
   'Variable'

```{autodoc2-docstring} ophyd_async.epics.motor.OffsetMode.VARIABLE
```

````

````{py:attribute} FROZEN
:canonical: ophyd_async.epics.motor.OffsetMode.FROZEN
:value: >
   'Frozen'

```{autodoc2-docstring} ophyd_async.epics.motor.OffsetMode.FROZEN
```

````

`````

`````{py:class} UseSetMode()
:canonical: ophyd_async.epics.motor.UseSetMode

Bases: {py:obj}`ophyd_async.core.StrictEnum`

```{autodoc2-docstring} ophyd_async.epics.motor.UseSetMode
```

````{py:attribute} USE
:canonical: ophyd_async.epics.motor.UseSetMode.USE
:value: >
   'Use'

```{autodoc2-docstring} ophyd_async.epics.motor.UseSetMode.USE
```

````

````{py:attribute} SET
:canonical: ophyd_async.epics.motor.UseSetMode.SET
:value: >
   'Set'

```{autodoc2-docstring} ophyd_async.epics.motor.UseSetMode.SET
```

````

`````
